--- a/stylep.css
+++ b/stylep.css
@@ -27,7 +27,7 @@ body{
     left:0;
     padding: 4rem 12%;
     background: rgba(0, 0, 0, 0.3);
-    backdrop-filter: blue(10px);
+    backdrop-filter: blur(10px);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -172,7 +172,7 @@ section{
     font-size: 1.8rem;
     margin-bottom: 20px;
 }
-.abt-content btn{
+.abt-content .btn{
     margin:3rem 0;
 }
 ::-webkit-scrollbar{
@@ -295,10 +295,10 @@ footer{
         position: absolute;
         top:100%;
         right:0;
-        width:50;
+        width:50%;
         padding: 1rem 3rem;
         background-color: rgba(0, 0, 0, 0.8);
-        border-left:2 px solid var(--main-color) ;
+        border-left:2px solid var(--main-color) ;
         border-bottom: 2px solid var(--main-color);
         border-bottom-left-radius: 2rem;
         display: none;
